<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <parent>
        <groupId>cc.uncarbon.framework</groupId>
        <artifactId>helium-starters-parent</artifactId>
        <version>4.0.0-SNAPSHOT</version>
    </parent>

    <groupId>cc.uncarbon.module</groupId>
    <artifactId>helium-monolith</artifactId>
    <description>Helium 快速开发平台脚手架 Monolith-style</description>
    <version>${revision}</version>

    <properties>
        <!-- 当前工程内，所有Maven模块统一版本号 -->
        <revision>4.0.1-SNAPSHOT</revision>
        <!-- 根据实际开发的 JDK 版本确定 -->
        <java.version>21</java.version>

        <!-- 这里管理全局第三方依赖版本，避免冲突 -->

        <!-- 文件上传 -->
        <x-file-storage.version>2.2.1</x-file-storage.version>
        <minio.version>8.5.17</minio.version>
    </properties>

    <modules>
        <module>bootstrap</module>
        <module>commons</module>
        <module>endpoints/admin-api</module>
        <module>endpoints/app-api</module>
        <module>services/file-facade</module>
        <module>services/file-service</module>
        <module>services/sys-facade</module>
        <module>services/sys-service</module>
        <module>services/tenant-facade</module>
        <module>services/tenant-service</module>
    </modules>

    <dependencyManagement>
        <!-- 这里管理全局第三方依赖版本，避免冲突 -->
        <dependencies>
            <!-- 文件上传 -->
            <!-- 对象存储工具类 https://gitee.com/dromara/x-file-storage -->
            <dependency>
                <groupId>org.dromara.x-file-storage</groupId>
                <artifactId>x-file-storage-spring</artifactId>
                <version>${x-file-storage.version}</version>
                <exclusions>
                    <!-- hutool 版本冲突，用框架统一的版本 -->
                    <exclusion>
                        <groupId>cn.hutool</groupId>
                        <artifactId>hutool-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- MinIO 依赖包 -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <!-- 支持 mybatis XML 放置在 java 包下 -->
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.xml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <!-- 编译时，跳过单元测试 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!-- 编译时，不执行 mvn deploy -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <!-- 编译时，不生成 javadoc.jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <!-- 编译时，不生成 sources.jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <configuration>
                    <skipSource>true</skipSource>
                </configuration>
            </plugin>

            <!-- 统一版本号，占位符 ${revision} -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.2.7</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
